crates/ink/tests/ui/trait_def/fail/message_constructor_conflict.rs
use ink_lang as ink;

#[ink::trait_definition]
pub trait TraitDefinition {
    #[ink(message, constructor)]
    fn message(&self);
}

fn main() {}
