crates/ink/tests/ui/trait_def/fail/message_constructor_conflict.stderr
error: encountered conflicting ink! attribute argument
 --> tests/ui/trait_def/fail/message_constructor_conflict.rs:3:20
  |
3 |     #[ink(message, constructor)]
  |                    ^^^^^^^^^^^
